--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "@laube-admin/admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.10.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@laube-admin/common": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.20",
