--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,7 +13,9 @@
     "start:prod": "node dist/main"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.3",
     "@laube-admin/common": "workspace:*",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "11.0.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.1",
