--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main"
+    "start:prod": "node dist/main",
+    "prisma:link": "pnpm add prisma-mysql@link:./prisma/client/mysql"
   },
   "dependencies": {
     "@keyv/redis": "^4.3.3",
@@ -20,8 +21,11 @@
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.1",
     "@nestjs/platform-express": "11.0.1",
+    "@prisma/client": "6.6.0",
     "js-yaml": "^4.1.0",
     "nest-winston": "^1.10.2",
+    "prisma": "^6.6.0",
+    "prisma-mysql": "link:prisma/client/mysql",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.17.0",
