--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,10 +20,14 @@
     "@nestjs/common": "11.0.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.0.1",
     "@prisma/client": "6.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "js-yaml": "^4.1.0",
     "nest-winston": "^1.10.2",
+    "passport-jwt": "^4.0.1",
     "prisma": "^6.6.0",
     "prisma-mysql": "link:prisma/client/mysql",
     "reflect-metadata": "^0.2.2",
@@ -40,6 +44,7 @@
     "@types/express": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
