feat: 鉴权与系统管理相关功能

--- a/packages/server/.env.development.yaml
+++ b/packages/server/.env.development.yaml
@@ -27,7 +27,7 @@ PERMISSION_ROLE_WHITE_LIST:
 # PERMISSION权限接口白名单
 PERMISSION_API_WHITE_LIST:
 
-# 日志
-LOG_DB: mongodb://root:example@localhost:27017/nest-log
-LOG_COLLECTION: starter
-LOG_LEVEL: warn
+# 日志配置
+ENABLE_FILE_LOG: false
+LOG_DIR: logs
+LOG_LEVEL: info
