--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@laube-admin/common": "workspace:*",
+    "antd": "^5.24.6",
+    "axios": "^1.8.4",
+    "less": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.10.0",
-    "zustand": "^5.0.3",
-    "@laube-admin/common": "workspace:*"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.20",
