--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev:admin": "pnpm --filter @laube-admin/admin dev",
     "dev:common": "pnpm --filter @laube-admin/common dev",
     "build:common": "pnpm --filter @laube-admin/common build",
+    "server:prisma:link": "pnpm --filter @laube-admin/server prisma:link",
+    "server:prisma:generate": "pnpm --filter @laube-admin/server prisma:generate",
+    "server:prisma:push": "pnpm --filter @laube-admin/server prisma:push",
     "lint": "eslint",
     "lint:style": "stylelint",
     "lint:staged": "lint-staged",
-    "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"(packages|apps)/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md)\"",
+    "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"packages/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md)\"",
     "prepare": "husky",
     "docker:start": "docker compose -f .devcontainer/docker-compose.yml up -d",
-    "docker:stop": "docker compose -f .devcontainer/docker-compose.yml down",
-    "server:prisma:link": "pnpm --filter @laube-admin/server prisma:link"
+    "docker:stop": "docker compose -f .devcontainer/docker-compose.yml down"
   },
   "keywords": [],
   "author": "",
