--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "prisma:link": "pnpm add prisma-mysql@link:./prisma/client/mysql"
+    "prisma:link": "pnpm add prisma-mysql@link:./prisma/client/mysql",
+    "prisma:generate": "npx prisma generate",
+    "prisma:push": "npx prisma db push"
   },
   "dependencies": {
     "@keyv/redis": "^4.3.3",
