--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -13,16 +13,17 @@
     "@laube-admin/common": "workspace:*",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
-    "less": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.30.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
