--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.327",
     "@laube-admin/common": "workspace:*",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0",
+    "react-router-dom": "^7.5.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
