--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "build": "cross-env NODE_ENV=production nest build",
+    "start": "cross-env NODE_ENV=production nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "prisma:link": "pnpm add prisma-mysql@link:./prisma/client/mysql",
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push"
@@ -31,6 +31,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-env": "^7.0.3",
     "js-yaml": "^4.1.0",
     "nest-winston": "^1.10.2",
     "passport-jwt": "^4.0.1",
