--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
     "@iconify/json": "^2.2.327",
+    "@iconify/react": "^5.2.1",
     "@laube-admin/common": "workspace:*",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "classnames": "^2.5.1",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
