feat: 提交 Prisma Client

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "nodemon --watch src --ext ts --exec 'pnpm build'"
+    "dev": "nodemon --watch src --ext ts --exec pnpm build"
   },
   "keywords": [],
   "author": "",
